CSS - All styling except mobile hamburger menu (and functionality)

--- a/styles.css
+++ b/styles.css
@@ -52,11 +52,14 @@ ul {
   /* MAX PAGE WIDTH */
   --page-max-width: 69.375rem;
 
+  /* PAGE PADDING */
+  --page-padding: 1rem;
+
   /* HEADER FIXED NAV */
   --logo-height-mob: 1.75rem; /* 28px */
   --logo-height-desk: 2.5rem; /* 40px */
   --header-padding-mob: 1.75rem; /* 28px */
-  --header-padding-desk: 5.5625rem; /* 28px */
+  --header-padding-desk: 6.0625rem 3.8125rem; /* 97px 61px */
 
   /* COLOURS */
   --clr-almost-white: #fffdfa;
@@ -218,8 +221,6 @@ p,
 /* ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ PAGE LAYOUT ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ */
 
 .page-padding {
-  --page-padding: 1rem;
-
   padding-inline: var(--page-padding);
   max-width: calc(var(--page-max-width) + (2 * var(--page-padding)));
   margin-inline: auto;
@@ -237,10 +238,6 @@ main {
   display: grid;
   gap: var(--gap-mob);
 }
-
-/* .grid > * {
-  border: 1px solid red;
-} */
 
 @media (min-width: 768px) {
   .bright-future-article {
@@ -346,12 +343,6 @@ main {
   gap: 2.5rem;
 }
 
-.mobile-nav-container {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
 @media (width < 640px) {
   .header {
     position: fixed;
@@ -374,6 +365,7 @@ main {
 
 @media (min-width: 1024px) {
   .header {
+    padding-block: var(--header-padding-desk);
   }
 }
 
